fix mobile menu on ios + minor fixes

--- a/_sass/vloca-2020/_contact-block.scss
+++ b/_sass/vloca-2020/_contact-block.scss
@@ -23,16 +23,24 @@
   }
 
   .properties {
-    margin-bottom: 0;
     background: transparent;
     padding: 0;
+    margin-bottom: 0;
+    margin-left: 0;
   }
 
   .properties__label,
   .properties__data {
     font-weight: 400;
-    font-size: 1.8rem;
-    line-height: 3.2rem;
+
+    @media only screen and (max-width: 499px) {
+      float: none;
+    }
+
+    @media only screen and (min-width: 500px) {
+      font-size: 1.8rem;
+      line-height: 3.2rem;
+    }
 
     &:last-of-type{
       padding-bottom: 0;
@@ -41,6 +49,14 @@
     p {
       margin: 0;
       padding: 0;
+    }
+  }
+  @media only screen and (max-width: 499px) {
+    .properties__label {
+      margin-top: 3rem;
+    }
+    .properties__data {
+      width: 100%;
     }
   }
 
